# vkd3d

./: README  meson.build  meson_options.txt
demos/: meson.build
include/: vkd3d_windows.h
include/meson/: vkd3d_d3d12.h  vkd3d_d3d12sdklayers.h  vkd3d_dxgibase.h  vkd3d_dxgitype.h
libs/vkd3d/: meson.build
libs/vkd3d-common/: meson.build
libs/vkd3d-shader/: meson.build
libs/vkd3d-utils/: meson.build
